style/app.css
/* ... */
.poster-content > p {
  width: 560px;
  text-align: center;
}

.poster-content strong {
  color: var(--light-100);
}

.poster-content .poster-brands {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.poster .brands {
  position: relative;
  display: flex;
  justify-content: center;
  margin: 0;
  width: 100%;
}

.poster .brands > img:last-child {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 18px;
}

.atelie canvas {
  background: var(--dark-100);
}

@media (min-width: 800px) {

  .poster .header-container {
    padding: 2.4rem 6.4rem;
    height: initial;
    min-height: 6.4rem;
  }

  .poster .scroll {
    top: 11.2rem;
    overflow-y: auto;
  }

  .poster .scroll {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
    padding: 6.4rem;
  }

  .poster figure {
    /* max-width: calc( 32rem + 9.6rem ); */
    max-width: calc( 14rem + 9.6rem );
    padding: 0 3.2rem 0 0;
  }

  .poster figure .poster-canvas {
    margin: 0;
  }

  .poster .scroll > div {
    display: flex;
    flex-direction: column;
    max-width: calc( 32rem + 9.6rem );
    padding: 0 0 0 3.2rem;
  }

  .poster .scroll .button {
    order: 4;
    height: 6.4rem;
  }

  .poster .scroll > div p:nth-of-type(1) {
    margin-top: 0;
  }

}

